# qa-agent

./: .env.example  .gitignore  CLAUDE.md  README.md
backend/: config.py  main.py  pyproject.toml
backend/api/: websocket.py
backend/api/routes/: execution.py  export.py  sessions.py  upload.py
backend/core/: agent.py  browser_check.py  config_parser.py  llm_client.py  llm_parser.py  mcp_client.py  models.py  orchestrator.py  prompt_builder.py  session.py
backend/mcp_servers/document/: parser.py  report_generator.py  server.py
backend/mcp_servers/playwright_browser/: browser_manager.py  server.py
docs/: AGENT_DESIGN.md  ARCHITECTURE.md  MCP_SERVERS.md  REQUIREMENTS.md  TECHNICAL_DESIGN.md  UI_DESIGN.md
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/sessions/[id]/execute/: page.tsx
frontend/src/app/sessions/[id]/results/: page.tsx
frontend/src/app/sessions/[id]/review/: page.tsx
frontend/src/lib/: api.ts  store.ts  types.ts  websocket.ts
tests/fixtures/: generate_test_docs.py  sample_config.yaml  sample_test_doc.docx  sample_test_doc_paragraph_steps.docx  sample_test_doc_unstructured.docx
